creusot/tests/should_fail/prusti/deny_zombies/old.stderr
error: T@'old cannot be moved to 'curr since it isn't copy
       otherwise it would become a zombie
 --> old.rs:5:11
  |
5 | #[ensures(old(x) == result)]
  |           ^^^^^^
  |
note: the lint level is defined here
 --> old.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: T@'old cannot be moved to 'curr since it isn't copy
                required by equality check
 --> old.rs:5:11
  |
5 | #[ensures(old(x) == result)]
  |           ^^^^^^

error: aborting due to 2 previous errors

